--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,3 +23,36 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install cosign
+        run: |
+          curl -sSL https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64 -o cosign
+          chmod +x cosign
+          sudo mv cosign /usr/local/bin/
+
+      - name: Install GitHub CLI
+        uses: cli/gh-action@v2
+
+      - name: Authenticate gh CLI
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "$GITHUB_TOKEN" | gh auth login --with-token
+
+      # Note: goreleaser handles signing via the `signs` config. We keep cosign
+      # installed here so post-release verification steps or optional manual
+      # signing can be performed later.
+
+      - name: Publish cosign public key (if provided)
+        env:
+          COSIGN_PUB: ${{ secrets.COSIGN_PUB }}
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+        run: |
+          if [ -n "$COSIGN_PUB" ]; then
+            echo "Writing cosign public key to dist/cosign.pub"
+            mkdir -p dist
+            echo "$COSIGN_PUB" > dist/cosign.pub
+            gh release upload "$GITHUB_REF_NAME" dist/cosign.pub --clobber || true
+          else
+            echo "No COSIGN_PUB secret provided; skipping public key upload"
+          fi
