--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,6 @@ jobs:
           curl -sSL https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64 -o cosign
           chmod +x cosign
           sudo mv cosign /usr/local/bin/
-          cosign version
 
       - name: Install GitHub CLI
         run: |
@@ -37,13 +36,13 @@ jobs:
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
           sudo apt update
           sudo apt install -y gh
-          gh --version
 
-      - name: Show PATH and cosign location
+      - name: Show PATH and versions
         run: |
           echo $PATH
-          which cosign
           cosign version
+          gh --version
+          tar --version
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
