--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,9 +24,7 @@ jobs:
 
       - name: Install cosign
         run: |
-          curl -sSL https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64 -o cosign
-          chmod +x cosign
-          sudo mv cosign /usr/local/bin/
+          sudo apt-get install cosign
 
       - name: Show PATH and versions
         run: |
