--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,3 +41,34 @@ jobs:
           name: dist-outputs
           path: dist/
           retention-days: 5
+
+      - name: Prepare tap release payload (binaries + sigs + docs)
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          set -euo pipefail
+          mkdir -p tap-dist
+          # Include archives typically produced by GoReleaser and their signatures
+          find dist -type f \ \
+            \( -name "*.tar.gz" -o -name "*.zip" -o -name "*.tar.xz" -o -name "*.tgz" \) \ \
+            \( ! -name "*source*" \) -print0 | xargs -0 -I {} cp -v {} tap-dist/
+          # Include detached signatures where present
+          find dist -type f \ \
+            \( -name "*.tar.gz.sig" -o -name "*.zip.sig" -o -name "*.tar.xz.sig" -o -name "*.tgz.sig" \) \ \
+            -print0 | xargs -0 -I {} cp -v {} tap-dist/ || true
+          # Explicitly exclude Debian and other package formats
+          rm -f tap-dist/*.deb tap-dist/*.deb.sig tap-dist/*.rpm tap-dist/*.apk 2>/dev/null || true
+          # Add top-level docs
+          cp -v README.md LICENSE tap-dist/
+
+      - name: Publish subset to tap repository (staranto/homebrew-tfctlgo)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          repository: staranto/homebrew-tfctlgo
+          tag_name: ${{ github.ref_name }}
+          draft: false
+          prerelease: ${{ contains(github.ref_name, '-') }}
+          files: |
+            tap-dist/**
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_GORELEASER_PAT }}
