source formatting consistency.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,6 +14,7 @@ linters:
     - copyloopvar
     - predeclared
     - gocritic
+    - godot # doc comment formatting (end with period, etc.)
 
 linters-settings:
   goimports:
@@ -24,6 +25,9 @@ linters-settings:
       - name: exported
       - name: var-naming
       - name: receiver-naming
+
+  godot:
+    scope: all
 
 issues:
   exclude-files:
