--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2025 Steve Taranto staranto@gmail.com
+# Copyright (c) 2025 Steve Taranto staranto@gmail.com.
 # SPDX-License-Identifier: Apache-2.0
 
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
@@ -55,7 +55,7 @@ release:
     name: tfctlgo
   footer: >-
 
-    Copyright (c) 2025 Steve Taranto staranto@gmail.com
+    Copyright (c) 2025 Steve Taranto staranto@gmail.com.
 
     ---
 
