feat: time transformation local/relative.

--- a/internal/attrs/testdata/transform_cases.yaml
+++ b/internal/attrs/testdata/transform_cases.yaml
@@ -123,31 +123,28 @@
 - name: time_transform_with_TZ_set
   transformSpec: "t"
   input: "2024-01-15T10:30:00Z"
-  envVars:
-    TZ: "America/New_York"
-  want: "2024-01-15T05:30:00EST"
-  description: ""
+  envVars: {}
+  want: "DYNAMIC_LOCAL_TIME"
+  description: "Removed TZ dependency; validated in code-based test."
 
 - name: time_transform_without_TZ
   transformSpec: "t"
   input: "2024-01-15T10:30:00Z"
   envVars: {}
-  want: "2024-01-15T10:30:00Z"
-  description: ""
+  want: "DYNAMIC_LOCAL_TIME"
+  description: "Removed pass-through expectation; uses system zone."
 
 - name: time_transform_with_T
   transformSpec: "T"
   input: "2024-01-15T10:30:00Z"
-  envVars:
-    TZ: "UTC"
-  want: "2024-01-15T10:30:00UTC"
-  description: ""
+  envVars: {}
+  want: "DYNAMIC_RELATIVE_TIME"
+  description: "Validated in code-based test due to variability."
 
 - name: invalid_time_format_unchanged
   transformSpec: "t"
   input: "not-a-time"
-  envVars:
-    TZ: "UTC"
+  envVars: {}
   want: "not-a-time"
   description: ""
 
