refactor: rename repository from tfctlgo to tfctl
- Update go.mod module path to github.com/staranto/tfctl
- Update all import paths in Go source files
- Update all references in docs, tldr, asciinema, and config files
- Update git remote URL to new repository
- Fix shadow variable in ps.go

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -46,7 +46,7 @@ formatters:
   settings:
     goimports:
       local-prefixes:
-        - github.com/staranto/tfctlgo
+        - github.com/staranto/tfctl
   exclusions:
     generated: lax
     paths:
